--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 .DS_Store
 notebooks/y/
-tests/563372_sightlines/y/
+tests/563372_sightlines/y/.DS_Store
+notebooks/**/.ipynb_checkpoints/
+tests/**/.ipynb_checkpoints/
+tests/**/y/
+notebooks/y/
+*.h5
+*.hdf5
+.DS_Store
+notebooks/**/.ipynb_checkpoints/
+tests/**/.ipynb_checkpoints/
+tests/**/y/
+notebooks/y/
+*.h5
+*.hdf5
