--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "astropy>=7.1.1",
     "h5py>=3.15.0",
     "illustris-python",
+    "ipykernel>=7.0.1",
     "jupyterlab>=4.4.9",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
