Revise and expand .gitignore rules
Updated .gitignore to include comprehensive rules for OS artifacts, Python files, virtual environments, build outputs, testing tools, Jupyter files, editor configs, logs, HPC outputs, and project-specific large files. This improves repository cleanliness and prevents accidental commits of unnecessary files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,101 @@
+# =========================
+# OS cruft (macOS/Windows)
+# =========================
 .DS_Store
-notebooks/y/
-tests/563372_sightlines/y/.DS_Store
-notebooks/**/.ipynb_checkpoints/
-tests/**/.ipynb_checkpoints/
-tests/**/y/
-notebooks/y/
-*.h5
-*.hdf5
-.DS_Store
-notebooks/**/.ipynb_checkpoints/
-tests/**/.ipynb_checkpoints/
-tests/**/y/
-notebooks/y/
+.AppleDouble
+.LSOverride
+._*
+Icon?
+.Spotlight-V100
+.Trashes
+Thumbs.db
+ehthumbs.db
+
+# =========
+# Python
+# =========
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+
+# =========================
+# Packaging / build outputs
+# =========================
+build/
+dist/
+downloads/
+.eggs/
+*.egg-info/
+*.egg
+pip-wheel-metadata/
+
+# =====================
+# Testing / tooling
+# =====================
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+coverage.xml
+htmlcov/
+.coverage*
+.tox/
+
+# =========
+# Jupyter
+# =========
+.ipynb_checkpoints/
+*.nbconvert.ipynb
+
+# ============
+# Editors/IDEs
+# ============
+.vscode/
+.idea/
+*.code-workspace
+
+# ======================
+# Logs & temp artifacts
+# ======================
+logs/
+*.log
+*.tmp
+*.bak
+
+# ======================
+# HPC / SLURM
+# ======================
+# Keep SLURM outputs under logs/ so they’re ignored by rule above
+
+# ==============================
+# Project-specific large outputs
+# (add exceptions with ! if needed)
+# ==============================
+outputs/
 *.h5
 *.hdf5
 *.fits
 *.pdf
-outputs/
-logs/
-.ipynb_checkpoints/
-__pycache__/
-.DS_Store
+*.tar
+*.tar.gz
+*.zip
+*_bundle.h5
+rays_and_spectra_*/
+_tmp_trident/
+
+# ==================================
+# Repo-specific path-based exclusions
+# ==================================
+# Ignore 'y/' folders in notebooks/ and tests/
+notebooks/y/
+tests/**/y/
+
+# (Redundant with .DS_Store above, but kept if you want path specificity)
+tests/563372_sightlines/y/.DS_Store
